--- a/docroot/sites/all/themes/hwc_frontend/less/header.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/header.less
@@ -106,9 +106,7 @@ header.navbar-default{
 				margin-left: 30px;
 			}
 			a img.pull-left{
-				width: 190px;
 			    height: auto;
-			    margin-top: 23px;
 			    margin-left: 0px;
 			}
 			img:nth-child(3){
@@ -131,11 +129,21 @@ header.navbar-default{
 			    float: left;
 			}
 			.header-text:lang(bg),
+			.header-text:lang(da),
 			.header-text:lang(el),
 			.header-text:lang(de),
+			.header-text:lang(et),
+			.header-text:lang(fr),
+			.header-text:lang(hr),
+			.header-text:lang(is),
+			.header-text:lang(it),
+			.header-text:lang(lv),
 			.header-text:lang(hu),
 			.header-text:lang(mt),
+			.header-text:lang(no),
 			.header-text:lang(pl),
+			.header-text:lang(pt),
+			.header-text:lang(fi),
 			.header-text:lang(ro){
 				font-size: 1.25em;
 				padding-left: 1em;
