--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -12,12 +12,16 @@
 							.box-before.events{
 								.view-frontpage-events{
 									.view-content{
+										.date{
+											width: 100%;
+    										padding-bottom: 10px;
+										}
 										> div{
 										    clear: both;
 										    float: none;
 										    width: 100%;
 										    height: auto;
-										    min-height: 135px;
+										    min-height: 160px;
 										    margin-right: 0;
 										}
 
@@ -241,6 +245,45 @@
 		}
 	}
 
+	.left-menu.accordion-menu{
+		float: left;
+	}
+
+	.region-sidebar-second{
+		padding-top: 2em;
+	}
+
+	body.front-page .main-container{
+		#block-hwc-homepage-hwc-homepage-news-events{
+			.before-the-campaign{
+				.content-box-before{
+					.box-before:nth-child(1){
+						.box-before.news{
+							.view-news{
+								.view-content{
+									> div{
+										.media-body{
+											padding-left: 0;
+										}
+									}
+								}
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+
+	.node-type-gpa .main-container {
+		.field-name-field-contact-details {
+		    width: 85%;
+		    margin-bottom: 2em;
+		    margin-top: 2em;
+		}
+	}
+
+
 }
 
 
@@ -318,7 +361,7 @@
 		display: block !important;
     	position: absolute;
     	top: 1px;
-    	right: 56px;
+    	right: 59px;
 	}
 	
 	header.navbar-default .campaigns-header .navbar-header #block-menu-menu-header-login ~ #block-lang-dropdown-language:after{
@@ -401,7 +444,7 @@
 		}
 		.box-before.events{
 			width: 56%;
-  		margin-right: 0;
+  			margin-right: 0;
 		}
 
 	}
@@ -859,19 +902,19 @@
 
 		> div.boxes > div:nth-child(1){
 			position: absolute;
-	    	left: 72px;
+	    	left: 72px !important;
 	    	top: 68px;
 		}
 
 		> div.boxes > div:nth-child(2){
 			position: absolute;
-			left: 72px;
+			left: 72px !important;
     		top: 310px;
 		}
 
 		> div.boxes > div:nth-child(3){
 			position: absolute;
-    		left: 71px;
+    		left: 71px !important;
     		top: 546px;
 		}
 	}
@@ -1001,6 +1044,11 @@
 						padding: 1em 0;
 					}
 				}
+				span.add-to-my-calendar{
+					clear: both;
+					float: left;
+					margin-top: 3em;
+				}
 			}
 		}
 
@@ -1035,7 +1083,17 @@
 					#edit-submit-events-search {
 					    left: 0px;
 					    top: 73px;
+					    position: absolute;
 					}
+				}
+
+				.clear_filters{
+					padding-top: 2em;
+					padding-left: 1em;
+				}
+
+				#remove_filter{
+					padding-left: 1em;
 				}
 			} 
 		}
@@ -1218,13 +1276,26 @@
 				}
 			}
 		}
+
+		.content-languages-download{
+			width: 100%;
+			select.new-select-style{
+				height: 34px;
+			}
+		}
 	}
 
-	.content-languages-download{
-		width: 100%;
-		select.new-select-style{
-			height: 34px;
-		}
+
+	.page-publications .content-publication-info, .page-tools-and-publications .content-publication-info {
+	    display: block;
+	    span:nth-child(1){
+	    	display: block;
+	    	width: 100%;
+	    	padding-bottom: 5px;
+	    }
+	    span.pages{
+	    	float: right;
+	    }
 	}
 
 }
@@ -1234,6 +1305,7 @@
 
 
 @media (max-width: 600px){
+
 	.before-the-campaign .content-box-before .two-box-column{
 		flex-direction: column;
 		margin-bottom: 0;
@@ -1258,7 +1330,7 @@
 
 
 @media (max-width: 669px) {
-	
+
 	/* Private Zone */
 	.profile-edit-links-container{
 		.panels-flexible-region-inside-first{
@@ -1266,4 +1338,18 @@
 		}
 	}
 
+	.node-type-practical-tool{
+		.field-name-field-type-of-item, .field-name-field-material-country, .field-name-field-available-in-languages, .field-collection-container{
+			float: none;
+			margin: 1em 3em 0.5em 0;
+		}
+	}
+}
+
+@media (max-width: 700px) {
+	body.page-tools-and-publications-practical-tools {
+		.region.region-content .view-content .views-row .views-field-body{
+			padding-bottom: 130px;
+		}
+	}
 }
