--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -24,6 +24,16 @@
 
 @media (max-width: 1200px){
 
+
+	.previous-next.two-arrows{
+		height: 114px;
+    	align-items: flex-start;
+	}
+
+	.previous span:nth-child(2), .next span:nth-child(2) {
+	    width: 170px;
+	}
+
 	html:lang(bg),
 	html:lang(da),
 	html:lang(de),
