HW20-882 - DE/BG/ES - While navigating the font size varies

--- a/docroot/sites/all/themes/hwc_frontend/css/style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/style.css
@@ -18556,7 +18556,7 @@ input#edit-field-image-und-0-upload::before {
 .page-campaign-media-partners #block-system-main .node-article .field-type-text-with-summary p,
 .page-campaign-partners-official-campaign-partners #block-system-main .node-article .field-type-text-with-summary p {
   text-align: left;
-  font-size: 1.2em;
+  font-size: 14px;
 }
 .page-enterprise-europe-network #block-system-main .node-article .field-type-text-with-summary p:last-child,
 .page-national-focal-points #block-system-main .node-article .field-type-text-with-summary p:last-child,
