--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -9422,7 +9422,7 @@ input#edit-field-image-und-0-upload::before {
 				margin: 0;
 				p{
 					text-align: left;
-    				font-size: 1.2em;
+    				font-size: 14px;
 				}
 				p:last-child{
 					margin-bottom: 10px;
