--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -386,6 +386,10 @@
 		}
 	}
 
+	.node-type-events .content-left-column {
+	    width: 70%;
+	}
+
 	.page-media-centre-events{
 		.view-events-search{
 			span.add-to-my-calendar {
