--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -5116,7 +5116,7 @@ span.add-to-my-calendar{
 	}
 
 	.content-left-column{
-		width: 70%;
+		width: 65%;
 		float: left;
 		padding-top: 2em;
 	}
@@ -5195,7 +5195,7 @@ span.add-to-my-calendar{
 
 	.group-right2{
 		float: right;
-	 	width: 22%;
+	 	width: 260px;
 	 	padding-top: 2em;
 	 	.event_day_month{
 	 		display: flex;
