--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -8805,7 +8805,7 @@ body.page-node-253 #block-hwc-partner-hwc-partner-back-to-private-zone .breadcru
     width: 72%;
   }
   .page_title h1 {
-    width: 65%;
+    width: 70%;
   }
   .node-type-events .content-left-column {
     width: 70%;
@@ -8817,6 +8817,16 @@ body.page-node-253 #block-hwc-partner-hwc-partner-back-to-private-zone .breadcru
   }
 }
 @media (max-width: 1465px) {
+  html:lang(de),
+  html:lang(es),
+  html:lang(bg) {
+    /*HW20-884*/
+  }
+  html:lang(de) .page_title h1,
+  html:lang(es) .page_title h1,
+  html:lang(bg) .page_title h1 {
+    font-size: 2.6em;
+  }
   header.navbar-default .navbar-collapse nav ul.menu > li {
     height: 70px;
     border-right: 1px solid #FFF;
