--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -50,6 +50,54 @@ header.navbar-default .navbar-collapse nav ul.menu li {
 	width: 15%;
 }
 
+html:lang(is){
+	header.navbar-default{ 
+		.campaigns-header {
+			#block-menu-menu-header-login {
+				a{
+					width: 129px;
+				}
+			}
+		}
+	}
+}
+
+html:lang(pl){
+	header.navbar-default{ 
+		.campaigns-header {
+			#block-menu-menu-header-login {
+				a{
+					width: 106px;
+				}
+			}
+		}
+	}
+}
+
+html:lang(pt){
+	header.navbar-default{ 
+		.campaigns-header {
+			#block-menu-menu-header-login {
+				a{
+					width: 123px;
+				}
+			}
+		}
+	}
+}
+
+html:lang(fi){
+	header.navbar-default{ 
+		.campaigns-header {
+			#block-menu-menu-header-login {
+				a{
+					width: 137px;
+				}
+			}
+		}
+	}
+}
+
 .region-above-header.region {
   margin-top: 0;
   padding-top: 0;
@@ -463,9 +511,11 @@ select{
 	}
 }
 
+html:lang(bg),
+html:lang(cs),
 html:lang(de),
+html:lang(et),
 html:lang(el),
-html:lang(es),
 html:lang(fr),
 html:lang(hu),
 html:lang(pl),
@@ -4404,7 +4454,22 @@ body{
 
 		}
 	}
+}
 
+html:lang(hr)
+{
+	.node-type-article article .field-name-body.field-type-text-with-summary{
+		.become-partner{
+			.coments .col{
+				.more-link{
+	    			a{
+	    				font-size: 0.75em;
+	    			}
+	    		}    
+
+			}
+		}
+	}
 }
 
 .how-to-apply{
