--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -1703,13 +1703,8 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
 	margin-top: 3em;
 }
 
-.introductory-page{
-	.field-name-body{
-		text-align: center;
-	    font-size: 1.7rem;
-	    padding-bottom: 2em;
-	    color: #003399;
-	}
+#block-menu-block-7{
+	padding-top: 0.5em;
 }
 
 .region.region-sidebar-first.well{
