--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -7067,7 +7067,7 @@ body.front-page{
 					padding-bottom: 0;
 					height: 385px;
 					h1{
-						padding-top: 1.5em;
+						padding-top: 1em;
 					    border-bottom: 0;
 					    font-size: 2em;
 					    font-style: normal;
@@ -7088,7 +7088,7 @@ body.front-page{
 						color: #FFF;
 					    padding-top: 1em;
 					    padding-bottom: 2em;
-					    max-width: 430px;
+					    max-width: 540px;
 					    margin: 0 auto;
 					    font-size: 1.2em;
 					}
@@ -7097,6 +7097,12 @@ body.front-page{
 						display: flex;
 			    		justify-content: center;
 			    		align-items: center;
+					}
+				}
+
+				.views-row-last{
+					p{
+					    max-width: 600px;
 					}
 				}
 			}
