--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -1586,10 +1586,15 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
 		margin-top: 0;
 		font-weight: 400;
 		background: url(../images/grey-h3-line.png) repeat-x 50% 75%;
-		margin-bottom: 0.5em;
+		margin-bottom: 0;
 		span{
 			background:#FFF;
 			padding-right: 0.7em;
+		}
+	}
+	.view-header{
+		.content{
+			margin-top: 0.5em;
 		}
 	}
 }
@@ -9487,7 +9492,7 @@ body.front-page{
 
 			.priority_area_info{
 				text-align: center;
-			    width: 80%;
+			    width: 85%;
 			    margin: 0.5em auto;
 			}
 	
