--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -26,14 +26,20 @@ header.navbar-default .campaigns-header .navbar-header #block-menu-menu-header-l
 
 /* Styles for only REL1 */
 	.rel1{
+		/*
 		#block-menu-menu-header-login, #block-lang-dropdown-language{
 			display: none;
+		}
+		*/
+		/*STG rel 1*/
+		#block-menu-menu-header-login{
+			visibility: hidden;
 		}
 	}
 
 	.rel1{
 		header.navbar-default .campaigns-header .navbar-header .header_top_bar .region-above-header{
-			padding-top: 1.3em;
+			/*padding-top: 1.3em;*/
 		}	
 	}
 
