--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -984,6 +984,18 @@
 	    }
 	} 
 
+	/*MHWC-141 with year only style*/
+	.page-node-184.year-only{
+		.timeline{
+			> div:nth-child(3) {
+    			position: absolute;
+			    left: 73px;
+			    top: 518px;
+			    right: initial;
+    		}
+		}
+	}
+
 
 	#block-views-partners-block-3{
 		padding-left: 4em;
