--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -27,6 +27,26 @@
 			max-width: 615px;
 		}
 	}
+	
+	/*MHWC-141 with year only style*/
+	.page-node-184.year-only{
+		.timeline{
+			> div:nth-child(3){
+				position: absolute;
+		    	right: 238px;
+		    	top: 9px;
+		    	font-weight: bold;
+				&:after{
+		    		position: absolute;
+				    left: 28%;
+				    top: 21px;
+				}
+				span{
+					padding-left: 6px;
+				}
+		    }
+		}
+	}
 
 	
 }
