--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -1092,6 +1092,15 @@
     	}
 	} 
 
+	/*MHWC-141 with year only style*/
+	.page-node-184.year-only{
+		.timeline{
+			> div:nth-child(3) {
+    			right: 233px;
+    		}
+		}
+	}
+
 	html:lang(bg), 
 	html:lang(cs), 
 	html:lang(et), 
@@ -1387,6 +1396,14 @@
     		right: 89px;
     	}
 	} 
+
+	.page-node-184{
+		.timeline{
+			> div:nth-child(3) {
+    			right: 128px;
+    		}
+		}
+	}
 
 
 }
