MHWC-164 - Landing pages - reduce the descriptive texts

--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -2408,6 +2408,7 @@ span.pages {
 }
 .container .content-box-sub p {
   color: #333333;
+  font-size: 0.9em;
 }
 /* Publication detail */
 .publication-detail {
