HW20-892 - Homepage: Reduce white space between menu and green modules

--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -1462,6 +1462,9 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
   justify-content: center;
   padding-bottom: 20px;
 }
+.front .page_title {
+  margin-bottom: 0;
+}
 .content {
   margin-top: 3em;
 }
