--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -1710,6 +1710,12 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
 	}
 }
 
+.front{
+	.page_title{
+		margin-bottom: 0;
+	}
+}
+
 .content{
 	margin-top: 3em;
 }
