--- a/docroot/partner/forms/mvc/view/tpl/entities/ocp_contact.html
+++ b/docroot/partner/forms/mvc/view/tpl/entities/ocp_contact.html
@@ -112,7 +112,7 @@
     </legend>
     
     <div class="separatorFieldSet">&nbsp;</div>
-    <p id="general-text">In this section you can add additional contacts for your own organisation. These new users will be able to make changes to your organisational profile. You will always be notified of such changes</p>
+    <p id="general-text">Please note that in this section you can add a maximum of 5 additional contacts for your organisation. These new users will be able to make changes to your organisational profile, but the main contact person will always be notified of such changes.</p>
    
    <div id="otherUserField1">
         {$attributes.contact_osh_otherusername1}
