MHWC-157 - SL - Content to be changed due to FOPs revision

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -42,6 +42,16 @@
 		}
 	}
 
+	html:lang(sl){
+		.page-campaign-partners-enterprise-europe-network{
+			.page_title{
+				.page-header{
+					max-width: 100%;
+				}
+			}
+		}
+	}
+
 	.node-type-priority-area .region-content{
 		#block-hwc-priority-areas{
 			.node-pa-highlights, .node-news {
