--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -18,18 +18,20 @@ header.navbar-default .campaigns-header .navbar-header #block-menu-menu-header-l
 }
 /* Styles for only REL1 */
 .rel1 {
+  /*PROD rel 1*/
+  /*STG rel 1*/
   /*
-		#block-menu-menu-header-login, #block-lang-dropdown-language{
-			display: none;
+		#block-menu-menu-header-login{
+			visibility: hidden;
 		}
 		*/
-  /*STG rel 1*/
 }
-.rel1 #block-menu-menu-header-login {
-  visibility: hidden;
+.rel1 #block-menu-menu-header-login,
+.rel1 #block-lang-dropdown-language {
+  display: none;
 }
 .rel1 header.navbar-default .campaigns-header .navbar-header .header_top_bar .region-above-header {
-  /*padding-top: 1.3em;*/
+  padding-top: 1.3em;
 }
 /*HW20-489*/
 .rel1 .related-resources-boxes {
